--- a/gazee/src/main/webapp/resources/css/nav.css
+++ b/gazee/src/main/webapp/resources/css/nav.css
@@ -8,6 +8,7 @@ html, body {
 	height: 100%;
 	padding: 0;
 	margin: 0;
+	box-sizing: border-box;
 }
 
 #wrap {
@@ -19,12 +20,17 @@ html, body {
 
 #header {
 	width: 100%;
-	border-bottom: 1px solid #ccc;
+	box-shadow: 0 1px 20px 1px rgba(0, 0, 0, 0.1);
+	position: fixed;
+    z-index: 3;
+    background-color: #fff;
 }
 
 #content {
 	flex: 1;
-	padding: 20px;
+	padding: 210px 0 100px 0;
+	display: flex;
+	flex-direction: column;
 }
 
 #footer {
@@ -34,11 +40,6 @@ html, body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-}
-
-p {
-	font-size: small;
-	margin: 0;
 }
 
 .headerContent {
@@ -56,7 +57,7 @@ p {
 	width: 200px;
 }
 
-#login {
+#member {
 	width: 100%;
 	margin: 0;
 	padding: 5px 0;
@@ -69,10 +70,11 @@ p {
 .user {
 	width: 1000px;
 	list-style-type: none;
-	padding: 0 30px;
 	display: flex;
 	margin: 0;
+	padding: 0;
 	justify-content: flex-end;
+	gap: 0 10px;
 }
 
 .user>li {
@@ -86,12 +88,18 @@ p {
 
 .menu {
 	list-style-type: none;
-	padding-right: 10%;
 	display: flex;
 	margin: 0;
 	padding: 0;
+	gap: 0 30px;
+	align-items: center;
 }
 
-.menu>li {
-	margin: 0 30px;
+#sell {
+	width: 110px;
+	height: 40px;
+	background-color: #693FAA;
+	color: #fff;
+	border-radius: 100px;
+	border-style: none;
 }
